Fixed img spacing, resized links.

--- a/style.css
+++ b/style.css
@@ -150,9 +150,11 @@ img.logo {
 }
 
 .intro-img {
-   width: 50%;
+   width: 34%;
    height: auto;
-   text-align: center;
+   margin: 0 0 80px 40px;
+   object-fit: contain;   
+   /* text-align: center; */
    position: relative;
    overflow: hidden;
    filter: drop-shadow(0 4px 20px
@@ -160,21 +162,20 @@ img.logo {
 }
 
 .intro-img img {
-   width: 120%;
+   width: 100%;
+   min-width: 200px !important;
    height: auto;
    display: block;
-   margin-left: -15%;
    position: relative;
-   clip-path: polygon(20% 0, 80% 0, 80% 100%, 20% 100%);
 }
 
 .circle-background {
    position: absolute;
-   top: 48%;
-   left: 45%;
+   top: 60%;
+   left: 50%;
    transform: translate(-50%, -50%);
-   width: 65%;
-   padding-top: 65%;
+   width: 94%;
+   aspect-ratio: 1 / 1;
    background-color: hsl(0, 0%, 6%);
    border-radius: 50%;
    z-index: -1;
@@ -1262,7 +1263,7 @@ footer {
       display: flex;
       flex-direction: column;
       width: 100%;
-      margin: 25px auto;
+      margin: 2.5rem auto;
       align-items: center;
       justify-content: center;
       font-size: 1.2rem;
@@ -1274,7 +1275,7 @@ footer {
 
    a.hire,
    .resume-cta {
-      width: 100%;
+      width: 65%;
       margin-right: 0;
 
       &::after {
@@ -1283,16 +1284,17 @@ footer {
    }
 
    .intro-img {
-      width: 55%;
-      min-width: 350px !important;
-      margin-left: 38px;
+      width: 50%;
+      min-width: 220px !important;
+      margin-left: 0;
+      margin-bottom: 20px;
    }
 
    #about-me {
       flex-direction: column-reverse;
       justify-content: center;
       align-items: center;
-      margin: 1rem auto 2rem;
+      margin: 0rem auto 1rem;
    }
    
    /* Ensure "My Skills" is centered and above the columns */
@@ -1564,9 +1566,9 @@ footer {
    }
 
    .intro-img {
-      width: 80%;
-      /* height: auto; */
-      margin-left: 30px;
+      width: 60%;
+      height: auto;
+      margin: 20px 0;
    }
 
    #about-me {
